# deeptminter

./: .gitignore  README.md  deeptminter_call.py  pyproject.toml  requirements.txt  run_deeptminter.py  setup.py
.github/workflows/: deploy.yml
data/: Supplementary Table 27.xlsx  Supplementary Table 28.xlsx  Supplementary Tables 19-26.xlsx
deeptminter/: load.py  predict.py
deeptminter/util/: AAProperty.py  AARepresentation.py  Conservation.py  Console.py  Cumulative.py  DataInitializer.py  EvolutionaryProfile.py  FSPosition.py  FSingle.py  Fasta.py  Feature.py  InformationTheory.py  Length.py  MSA.py  Phobius.py  Position.py  Reader.py  SSFasta.py  SSingle.py  Sequence.py  Stacking.py  Tinker.py  WSingle.py
docs/: developer.md  index.md  installation.md  jsun.bib  myst.yml  publication.md  spotlight.md  versions.md
docs/tutorial/: data.md  model.md  prediction.md
input/: 3jcuH.aln  3jcuH.ccmpred  3jcuH.evfold  3jcuH.fasta  3jcuH.gdca  3jcuH.jphobius  3jcuH.plmc
model/: README.md
output/: 3jcuH.deeptminter  3jcuH.m1  3jcuH.m2  3jcuH.m3  3jcuH.m4  3jcuH.m5  3jcuH.mexpand1  3jcuH.mexpand2  3jcuH.mexpand3  3jcuH.stk
src/: AminoAcidProperty_dprs.py  AminoAcidRep_dprs.py  Conservation_dprs.py  Cumulative_dprs.py  DataInitializer_dprs.py  EvolutionaryProfile_dprs.py  FSPosition_dprs.py  FS_dprs.py  FSingle_dprs.py  Fasta_dprs.py  InformationTheory_dprs.py  Kind_dprs.py  Length_dprs.py  MSA_dprs.py  Phobius_dprs.py  Position_dprs.py  Reader_dprs.py  SSFasta_dprs.py  SSingle_dprs.py  Sequence_dprs.py  Single_dprs.py  Stacking_dprs.py  Tinker_dprs.py  troll.sh
(+468 files in other folders)
